--- a/canardpc.user.styl
+++ b/canardpc.user.styl
@@ -1,5 +1,6 @@
 /* ==UserStyle==
 @name         CanardPcMagTemplate
+@namespace    github.com/IGLOU-EU/CanardPcMagTemplate
 @version      1.0.0
 @description  Un template pour une union avec le magazine papier
 @author       Iglou.eu
