Amélioration de l'agrandissement des images
Amélioration de la taille des images en mode zoom
Et modification du placement des boutons précédant suivant

Code communautaire
Par: `moimadmax`
Url: `https://forum.canardpc.com/threads/130796-Le-nouveau-site-de-Canard-PC-(2021)?p=13426384&viewfull=1#post13426384`

--- a/canardpc.user.styl
+++ b/canardpc.user.styl
@@ -357,6 +357,21 @@
   .post-template-default .default-post .post-content .post-slideshow .next-arrow {
       right: 0;
   }
+  
+  #PostImageBox .post-image-box-container img {
+    max-height: 95%;
+    max-width: 95%;
+  }
+  #PostImageBox .post-image-box-container .post-image-box-nav .next-arrow,
+  #PostImageBox .post-image-box-container .post-image-box-nav .prev-arrow {
+    transform: unset;
+  }
+  #PostImageBox .post-image-box-container .post-image-box-nav .next-arrow {
+    right: 0;
+  }
+  #PostImageBox .post-image-box-container .post-image-box-nav .prev-arrow {
+    left: 0;
+  }
 
   /* Footer */
   #Footer {
