--- a/canardpc.user.styl
+++ b/canardpc.user.styl
@@ -7,7 +7,7 @@
 @license      MIT
 ==/UserStyle== */
 
-@-moz-document domain("canardpc.com"), domain("www.canardpc.com") {
+@-moz-document regexp("https?://(!?www.)?canardpc.com.*") {
   @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap');
 
   /* Couleurs */
