Ajout de couleur sur acticles lu
Il n'est pour le moment pas possible de savoir si vous avez lu un article ...
Cet ajout permet de savoir si l'on a au moins clique sur le lien.

Code communautaire
Par: ` gros_bidule`
Url: `https://forum.canardpc.com/threads/130796-Le-nouveau-site-de-Canard-PC-(2021)?p=13446408&viewfull=1#post13446408`

--- a/canardpc.user.styl
+++ b/canardpc.user.styl
@@ -93,6 +93,10 @@
       box-shadow: 0 0 3px rgba(0,0,0,.2);
   }
 
+  a:visited .post-title {
+    color: var(--c-red) !important;
+  }
+  
   .btn, .btn--danger, 
   .btn--ghost, 
   .btn--info, 
