--- a/canardpc.user.styl
+++ b/canardpc.user.styl
@@ -3,7 +3,7 @@
 @namespace    github.com/IGLOU-EU/CanardPcMagTemplate
 @version      1.0.1
 @description  Un template pour une union avec le magazine papier
-@author       Iglou.eu
+@author       Iglou.eu, Coin-coin le Canapin, Moimadmax, gros_bidule
 @license      MIT
 ==/UserStyle== */
 
